fixed the uneven spacing for pasword

--- a/public/css/newaccount.css
+++ b/public/css/newaccount.css
@@ -72,6 +72,10 @@ input[type=submit] {
   margin-top: 10px;
 }
 
+input[type=password] {
+  margin-top: 5px;
+}
+
 #gif {
   display: inline-block;
   width: 200px;
